--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,8 @@ description: Minimalistic Theme for Jekyll
 baseurl: ''
 url: ''
 author:
-  name: Sasha Levi
-  bio: >-
-    Hi, my name is Sasha Levi. I like being at the center of events, being free
-    and enjoying every moment. Thank you for visiting my blog.
+  bio: 'Hi, my name is Jason.'
+  name: Jason Wai
 twitter: 'https://twitter.com/'
 facebook: 'https://facebook.com/'
 dribbble: 'https://dribbble.com/'
@@ -15,7 +13,7 @@ instagram: 'https://instagram.com/'
 pinterest: 'https://pinterest.com/'
 email: forexample@website.com
 hero: true
-hero-title: Raked Minimalistic Theme
+hero-title: Privacy. Law. Technology.
 hero-subtitle: For those who love simplicity
 hero-image: images/14.jpg
 footer-image: images/14.jpg
