Update Global Site Config “config”

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Reked
 logo: images/logo.svg
-description: Minimalistic Theme for Jekyll
+description: Privacy. Law. Technology.
 baseurl: ''
 url: ''
 author:
