Update Global Site Config “config”

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jason Wai
-logo: /images/me.png
+logo: /images/me.jpg
 description: 'privacy technology law '
 baseurl: ''
 url: ''
@@ -15,8 +15,8 @@ email: forexample@website.com
 hero: true
 hero-title: Jason Wai
 hero-subtitle: Privacy. Law. Technology.
-hero-image: /images/me.jpg
-footer-image: ''
+hero-image: /images/milky-way-1023340_1920.jpg
+footer-image: /images/milky-way-984050_1920.jpg
 disqus-identifier: mr-brown
 google-analytics: ''
 mailchimp: ''
