Update Global Site Config “config”

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ hero-title: Jason Wai
 hero-subtitle: Privacy. Law. Technology.
 hero-image: /images/milky-way-1023340_1920.jpg
 footer-image: /images/milky-way-984050_1920.jpg
-disqus-identifier: mr-brown
+disqus-identifier: ''
 google-analytics: ''
 mailchimp: ''
 markdown: kramdown
